Fix spacing

--- a/integration-libs/s4om/styles/schedule-lines.scss
+++ b/integration-libs/s4om/styles/schedule-lines.scss
@@ -10,10 +10,11 @@ cx-schedule-lines {
   .cx-label {
     font-weight: var(--cx-font-weight-normal);
     font-size: var(--cx-font-size, 1rem);
-    padding-inline-end: 0.188rem;
+    padding-inline-end: 0.313rem;
   }
 
   .cx-value {
+    padding-inline-end: 5px;
     padding-inline-start: 0em;
   }
 
